[package]
name = "protodef-parser"
version = "0.1.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Protodef specification parser"
license = "MIT"
homepage = "https://github.com/eihwaz/protodef-parser"
repository = "https://github.com/eihwaz/protodef-parser"
keywords = ["protodef"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_test = "1.0"
